Fix(style): contrast on submit buttons fow WAVE

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@100;200;400;600;700&display=swap');
 
 /* Override Materialize components fonts */
-body, button, .btn, .card {
+body, .card {
     font-family: 'Barlow Condensed' !important;
-    font-weight: 700 !important;
+    font-weight: 400 !important;
 }
 
 .image-wrapper {
@@ -58,6 +58,10 @@ footer {
     margin-right: 5%;
 }
 
+button, .btn {
+    font-family: 'Barlow Condensed' !important;
+    font-weight: 600 !important;
+}
 /* Materialize component style override */
 
 .sidenav {
